# tmsignatures

./: .gitignore  datasets_config.json  logging_config.json  main.py  pyproject.toml
scripts/: conduct_experiments.py  prepare_data.py
tms/: detector.py  extraction.py
tms/data/: datasets.py
tms/data/utils/: detector.py  video_manipulations.py
tms/experiments/: signatures.py  transformations.py
tms/experiments/models/: nsvm.py  resnet.py  svm.py
tms/utils/: data.py  env.py  facecrop.py  logger.py
