[project]
name = "tmsignatures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argparse>=1.4.0",
    "ffmpeg-python>=0.2.0",
    "polars>=1.26.0",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "yt-dlp>=2025.3.26",
]
